--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ NODE_ENV=development
 VITE_HOST=localhost
 VITE_PORT=5173
 VITE_APP_API_URL=http://localhost:8000
-VITE_API_ARTICLE_URL=http://localhost:8001
+VITE_ARTICLE_API_URL=http://localhost:8001
+VITE_ARTICLE_API_SHARED_TOKEN=secret_token
