--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
+    "vue-multiselect": "^3.2.0",
     "vue-router": "^4.1.3",
     "vue3-apexcharts": "^1.8.0"
   },
